Remove answers from html with server side logic

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -6,7 +6,7 @@ body{background:#659DBD;
 .center_wrapper{
     width:100%;
     text-align:center;}
-.center_wrapper div{
+.center_wrapper > div{
     display:inline-block;
     width:500px;}
 #answer_wrapper{
