--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,22 +1,12 @@
-body{background:#659DBD;
-    color: #FBEEC1;
-    font-family: arial, sans-serif;}
-#main_body{background:white;
-    color:black;}
+body{background:#659DBD !important;
+    margin-top:1em !important;}
+#main_body{
+    background:white;}
+#main_body>h1{
+    padding-top:0.5em;}
 .center_wrapper{
     width:100%;
     text-align:center;}
 .center_wrapper > div{
     display:inline-block;
     width:500px;}
-#answer_wrapper{
-    display:flex;
-    flex-direction:row;
-    justify-content: space-around;}
-.answer{
-    width:200px;
-    padding: 25px;
-    display:flex;
-    flex-direction:column;}
-#left_answer{
-    float:left;}
